thijswo: Fix for a password with a colon.