@@ -1,6 +1,6 @@
 package org.simbasecurity.client.rest;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 public class UserNamePassword {
     private final String userName;
@@ -26,13 +26,13 @@ public class UserNamePassword {
         if(!auth.toLowerCase().startsWith("basic ")) {
             throw new UnsupportedOperationException(String.format("'%s' is not a correct basic authentication header", auth));
         }
-        String[] split = new String(decode(auth.substring(6))).split(":");
+        String[] split = new String(decode(auth.substring(6))).split(":", 2);
         return fromString(split);
     }
 
     private static byte[] decode(String substring) {
         try {
-            return DatatypeConverter.parseBase64Binary(substring);
+            return Base64.getDecoder().decode(substring);
         } catch(Exception e){
             throw new UnsupportedOperationException(String.format("'%s' is not a valid base64 encoded string", substring));
         }
@@ -42,6 +42,6 @@ public class UserNamePassword {
         if(split.length != 2){
             throw new UnsupportedOperationException("The provided authorization needs to be in the form 'username:password'");
         }
-        return new UserNamePassword(split[0].trim(), split[1].trim());
+        return new UserNamePassword(split[0], split[1]);
     }
 }
